# ContraMamba

./: .gitignore  ContraMamba.ipynb  README.md  contramamba-v1.ipynb  contramamba-v2.ipynb  contramamba-v3.ipynb  contramamba-v4.ipynb.txt  pyproject.toml
data/: controlled_v5_seed.jsonl  controlled_v5_v1.jsonl  controlled_v5_v2.jsonl  controlled_v5_v3.jsonl  controlled_v5_v3_without_time_swap.jsonl  stage10a_number_swap_probe.jsonl  stage15_slot_sensitivity_probe.jsonl  stage30c1_temporal_safety_diagnostic_from_controlled_v5_v3.jsonl  stage31_coverage_entailment_probe.jsonl  stage31c_coverage_entailment_aux.jsonl  stage34a_heldout_coverage_probe.jsonl  stage43b1_climate_fever_test_sample1000.jsonl  stage43b1_vitaminc_validation_sample1000.jsonl  stage57_nonleaking_external_bridge.jsonl  stage66_residual_bridge.jsonl  stage75_targeted_residual_bridge.jsonl  stage80a_conservative_stage75v2_bridge.jsonl  stage83a_ne_safety_only_bridge.jsonl  stage84e2_vitaminc_validation_sample1000_exact_ood_schema.jsonl  stage88a_balanced_entitlement_recovery_bridge.jsonl  stage92a_support_preserving_counter_bridge.jsonl  stage95a_anti_ne_entitlement_preservation_bridge.jsonl  stage95a_stage92a_combined_support_antine_bridge.jsonl  stage97a_half_size_numeric_date_antine_bridge.jsonl  stage97a_stage92a_combined_half_antine_bridge.jsonl  stage99a_stage92a_stage97a_combined_support_floor_bridge.jsonl  stage99a_support_floor_micro_bridge.jsonl  toy_interventions_v5.jsonl
docs/: architecture_diagram.md  paper_tables.md  router_cost_metrics.md  shadow_diagnostics_registry.md  (+9 more)
(+1199 files in other folders)
